Remove unused AI modules: AiMemoryContextService, AISearchEngineTool, AIWebSearchTool, and AISystemMsg. Streamline codebase by eliminating obsolete services and tools.